para mergin con ara

--- a/views/sales/productCart.ejs
+++ b/views/sales/productCart.ejs
@@ -25,7 +25,7 @@
                                                 <h4><%= products_Detail[i].Products.id %></h4>
                                                 <h4>
                                                 <!-- <button type="button" id="buttonMinus<%= products_Detail[i].Products.id %>"  class="far fa-minus-square" > </button> -->
-                                                <button  id="add"  class="far fa-plus-square" ></button>
+                                                <button  id="add<%= products_Detail[i].Products.id %>"  class="far fa-plus-square" ></button>
                                                 <input type="text" id="quantity5" value="10" class="quantity">
                                                 <button  id="subtrat"  class="far fa-minus-square" ></button>
                                                 <!-- <button type="button" id="buttonPlus<%= products_Detail[i].Products.id %>"  class="far fa-plus-square"  >  -->
