--- a/views/product/productAdmin.ejs
+++ b/views/product/productAdmin.ejs
@@ -27,7 +27,7 @@
                                 <h5>Descripción</h5>
                                 <div class="text-danger" id="msgFront_description"> 
                                     <% if (locals.errors && errors.description) { %>
-                                        <%= errors.name.msg %> 
+                                        <%= errors.description.msg %> 
                                     <% } %>
                                 </div>
                                 <p><input type="text" name="description" id="description" value="<%=cervezaToEdit.description%>" class='rg-input'></p>
@@ -36,7 +36,7 @@
                                 <h5>Amargor </h5>
                                 <div class="text-danger" id="msgFront_bitterness">
                                     <% if (locals.errors && errors.bitterness) { %>
-                                        <%= errors.name.msg %> 
+                                        <%= errors.bitterness.msg %> 
                                     <% } %>
                                 </div>
                                 <p><input type="text" name="bitterness" id="bitterness" value="<%=cervezaToEdit.bitterness%>" class='rg-input'></p>
@@ -45,7 +45,7 @@
                                 <h5>Alcohol </h5>
                                 <div class="text-danger" id="msgFront_alcohol"> 
                                     <% if (locals.errors && errors.alcohol) { %>
-                                        <%= errors.name.msg %> 
+                                        <%= errors.alcohol.msg %> 
                                     <% } %>
                                 </div>
                                 <p><input type="text" name="alcohol" value="<%=cervezaToEdit.alcohol%>" id="alcohol" class='rg-input'></p>
@@ -54,7 +54,7 @@
                                 <h5>Color </h5>
                                 <div class="text-danger" id="msgFront_color">
                                     <% if (locals.errors && errors.color) { %>
-                                        <%= errors.name.msg %> 
+                                        <%= errors.color.msg %> 
                                     <% } %>
                                 </div>
                                 <p><input type="text" name="color" id="color" value="<%=cervezaToEdit.color%>" class='rg-input'></p>
@@ -63,7 +63,7 @@
                                 <h5>Lúpulo/s </h5>
                                 <div class="text-danger" id="msgFront_hop"> 
                                     <% if (locals.errors && errors.hop) { %>
-                                        <%= errors.name.msg %> 
+                                        <%= errors.hop.msg %> 
                                     <% } %>
                                 </div>
                                 <p><input type="text" name="hop" id="hop" value="<%=cervezaToEdit.hop%>" class='rg-input'></p>
@@ -72,7 +72,7 @@
                                 <h5>Gasificación </h5>
                                 <div class="text-danger" id="msgFront_carbonation"> 
                                     <% if (locals.errors && errors.carbonation) { %>
-                                        <%= errors.name.msg %> 
+                                        <%= errors.carbonation.msg %> 
                                     <% } %>
                                 </div>
                                 <p><input type="text" name="carbonation" id="carbonation" value="<%=cervezaToEdit.carbonation%>"class='rg-input' ></p>
@@ -81,7 +81,7 @@
                                 <h5>Precio </h5>
                                 <div class="text-danger" id="msgFront_price">
                                     <% if (locals.errors && errors.price) { %>
-                                        <%= errors.name.msg %> 
+                                        <%= errors.price.msg %> 
                                     <% } %>
                                 </div>
                                 <p><input type="text" name="price" id="price" value="<%=cervezaToEdit.price%>"class='rg-input' ></p>
@@ -105,7 +105,7 @@
                         <input type="text" name="image" style="opacity: 0;" id="inputImg" value="<%=cervezaToEdit.image%>" class='rg-input'>                
                         <div class="text-danger" id="msgFront_image"> 
                             <% if (locals.errors && errors.productImage) { %>
-                                <%= errors.name.msg %> 
+                                <%= errors.productImage.msg %> 
                             <% } %>
                         </div>
                     <div class="pd-options rg-input">
