--- a/views/product/productCreate.ejs
+++ b/views/product/productCreate.ejs
@@ -35,7 +35,7 @@
                                         <%= errors.description.msg %> 
                                     <% } %>
                                 </div>
-                                <p><input type="text" name="description" id="description" value="" class='rg-input' value="<%= locals.oldData ? oldData.description : null %>"></p>
+                                <p><input type="text" name="description" id="description"  class='rg-input' value="<%= locals.oldData ? oldData.description : null %>"></p>
                             </li>
                             <li class='pa-li-element'>
                                 <h5>Amargor </h5>
@@ -44,7 +44,7 @@
                                         <%= errors.bitterness.msg %> 
                                     <% } %>
                                 </div>
-                                <p><input type="text" name="bitterness" id="bitterness" value="" class='rg-input' value="<%= locals.oldData ? oldData.bitterness : null %>"></p>
+                                <p><input type="text" name="bitterness" id="bitterness"  class='rg-input' value="<%= locals.oldData ? oldData.bitterness : null %>"></p>
                             </li>                  
                             <li class='pa-li-element'>
                                 <h5>Alcohol </h5>
@@ -53,7 +53,7 @@
                                         <%= errors.alcohol.msg %> 
                                     <% } %>
                                 </div>
-                                <p><input type="text" name="alcohol" id="alcohol" value="" class='rg-input' value="<%= locals.oldData ? oldData.alcohol : null %>"></p>
+                                <p><input type="text" name="alcohol" id="alcohol"  class='rg-input' value="<%= locals.oldData ? oldData.alcohol : null %>"></p>
                             </li>
                             <li class='pa-li-element'>
                                 <h5>Color </h5>
@@ -62,7 +62,7 @@
                                         <%= errors.color.msg %> 
                                     <% } %>
                                 </div>
-                                <p><input type="text" name="color" id="color" value="" class='rg-input' value="<%= locals.oldData ? oldData.color : null %>"></p>
+                                <p><input type="text" name="color" id="color"  class='rg-input' value="<%= locals.oldData ? oldData.color : null %>"></p>
                             </li>
                             <li class='pa-li-element'>
                                 <h5>Lúpulo/s </h5>
@@ -71,7 +71,7 @@
                                         <%= errors.hop.msg %> 
                                     <% } %>
                                 </div>
-                                <p><input type="text" name="hop" id="hop" value="" class='rg-input' value="<%= locals.oldData ? oldData.hop : null %>"></p>
+                                <p><input type="text" name="hop" id="hop"  class='rg-input' value="<%= locals.oldData ? oldData.hop : null %>"></p>
                             </li>
                             <li class='pa-li-element'>
                                 <h5>Gasificación </h5>
@@ -80,7 +80,7 @@
                                         <%= errors.carbonation.msg %> 
                                     <% } %>
                                 </div>
-                                <p><input type="text" name="carbonation" id="carbonation" value=""class='rg-input' value="<%= locals.oldData ? oldData.carbonation : null %>"></p>
+                                <p><input type="text" name="carbonation" id="carbonation" class='rg-input' value="<%= locals.oldData ? oldData.carbonation : null %>"></p>
                             </li>
                             <li class='pa-li-element'>
                                 <h5>Precio </h5>
@@ -89,7 +89,7 @@
                                         <%= errors.price.msg %> 
                                     <% } %> 
                                 </div>
-                                <p><input type="text" name="price" id="price" value=""class='rg-input' value="<%= locals.oldData ? oldData.price : null %>"></p>
+                                <p><input type="text" name="price" id="price" class='rg-input' value="<%= locals.oldData ? oldData.price : null %>"></p>
                             </li>
                             <li class='pa-li-element'>
                                 <h5>Categoría </h5> 
@@ -105,7 +105,7 @@
                             </li>        
                         </ul>        
                         <input type="file" name="product-image" id="productImage" class='rg-input' value="<%= locals.oldData ? oldData.productImage : null %>">
-                        <input type="text" name="image"  style="opacity: 0;" value="" class='rg-input'>
+                        <input type="text" name="image"  style="opacity: 0;"  class='rg-input'>
                         <div class="text-danger" id="msgFront_image"> 
                             <% if (locals.errors && errors.productImage) { %>
                                 <%= errors.name.msg %> 
