--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -136,9 +136,14 @@
                         id="avatar"
                         class="rg-input"
                         accept=".jpg,.png,.jpeg,.gif"
-                        onchange="valExtFile()">
+                        class="rg-input"<%= locals.errors && errors.password ? 'is-invalid' : null %>"
+                        value="<%= locals.oldData ? oldData.avatar : null %>">
+                <% if (locals.errors && errors.avatar) { %>
+                    <div class="text-danger">
+                        <%= errors.avatar.msg %> 
+                    </div>
+                <% } %>
                 </div>
-                
                 <div class="text-danger" id="msgFront_avatar"> </div>
             </div>
             <p>* Campos requeridos.</p>
