--- a/views/recetas/nuestrasRecetas.ejs
+++ b/views/recetas/nuestrasRecetas.ejs
@@ -25,7 +25,7 @@
         <div class="nr-main-containter">
             <div class="add-receta-container">
             <% if (locals.datos && datos.userLogged && datos.userLogged.users_roles_id == 2 ){ %>
-                <button class="pd-admin"><a href="/recetas/nuevaReceta/">Agregar nueva receta</a></button>
+                <button class="pd-admin"><a href="/recetas/nuevaReceta/" class="pd-admin-a">Agregar nueva receta</a></button>
             <%}%>
          </div>
            
