--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -113,8 +113,7 @@
                     type="password" 
                     class="rg-input"
                     name="passVerify" 
-                    id="passVerify" 
-                    onkeyup="validar()">
+                    id="passVerify" >
                 <% if (locals.errors && errors.passVerify) { %>
                     <div class="text-danger">
                         <%= errors.passVerify.msg %> 
