--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <header class="main-header">
     <nav class="main-navbar">
-        <img src="/Desing/Logo-Etiqueta-Originals/540x540sqr.png" class="logo">
+        <a href="/"><img src="/Desing/Logo-Etiqueta-Originals/540x540sqr.png" class="logo"></a>
         <ul class="left-navbar">                
             <li><a href="/">Home </a></li>
             <li><a href="/quienesSomos">Quienes somos </a></li>
