--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -101,12 +101,12 @@
             <form action="/users/login" method="POST" class="lg-form-login rg-form">
                 <div>
                     <label>Email</label>
-                    <input type="email" name="email" id="email" class="lg-input">                    
-                    <div class="text-danger" id="msgFront_email">
-                            <% if (locals.errors && errors.email) { %>
-                                <%= errors.email.msg %>
-                            <% } %>
-                    </div>
+                    <input type="email" name="email" id="email" class="lg-input">  
+                    <% if (locals.errors && errors.email) { %>                  
+                        <div class="text-danger" id="msgFront_email"></div>
+                        <%= errors.email.msg %>
+                    <% } %>
+                    
                 </div>
                 <div>
                     <label>Constraseña</label>
