--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -7,6 +7,8 @@
 	<form action="/users/profile/<%= user.id %> " class="" method="POST" enctype="multipart/form-data">
 		<div class="nr-main-containter">
 			<div class="add-receta-container">
+				<p><% datos.userLogged  %> </p>
+				<p><% datos.userLogged.users_roles_id %> </p>
 			<% if (locals.datos && datos.userLogged && datos.userLogged.users_roles_id == 2 ){ %>
 				<button class="pd-admin"><a href="/users/users" class="pd-admin-a">Ver listado de usuarios</a></button>
 			<%}%>
