--- a/views/partials/articles.ejs
+++ b/views/partials/articles.ejs
@@ -2,7 +2,7 @@
 <% for (i=0;i< datos.cervezas.length;i++){%>
     
         <article class="col-12 col-sm-6 col-lg-3 pd-product">
-            <img class="pd-img-product" src="/images/<%= datos.cervezas[i].image %>" width="360" alt="beer">
+            <img class="pd-img-product" src="<%= datos.cervezas[i].image %>" width="360" alt="beer">
             <div class="pd-datos-cerveza">
                 <h4><%= datos.cervezas[i].name %></h4>
                 <h4>$ <%= datos.cervezas[i].price %></h4>
