--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -18,7 +18,7 @@
                 <ul class="dropdown-menu-container">
                     <% if (locals && locals.isLogged) { %>
                         <li>
-                            <img src="/images/avatars/<%= locals.userLogged.avatar %>"> 
+                            <img src="<%= locals.userLogged.avatar %>"> 
                             <a><%= locals.userLogged.name %></a>
                             
                             <ul class="dropdown-menu">
