--- a/views/product/productDetail.ejs
+++ b/views/product/productDetail.ejs
@@ -11,7 +11,7 @@
     <section class="pd-product-area">
 
         <div class="pd-product-imgs">
-            <img src="/images/<%= product.image %>" alt="beer">
+            <img src="<%= product.image %>" alt="beer">
         </div>
 
         <div class="pd-product-info">
