--- a/views/recetas/editRecetas.ejs
+++ b/views/recetas/editRecetas.ejs
@@ -400,9 +400,11 @@
 
                 </form>
                 <form action="/recetas/<%=recetaToEdit.id %>?_method=DELETE" method="POST">
+                    <div class="ra-receta-container">
                     <div class="ra-buton-container">
                         <button class="pd-admin ra-edit"></a>Eliminar receta</a></button>
                     </div>
+                </div>
                 </form>
 
             </div>
