--- a/views/sales/productCart.ejs
+++ b/views/sales/productCart.ejs
@@ -13,15 +13,15 @@
                 <section class="pc-cart"> 
                         <div class="pc-product-group">
                             <div class="pc-product-cantidad">
-                               
+                                <label class="pc-direccionEnvio-detalle-texto" >Productos en Carrito</label> 
                                 <div class="shopping-cart-items shoppingCartItemsContainer" id="shoppingCartItemsContainer" >
                                     <% for (i=0;i< products_Detail.length;i++){%>
                                         <div class="shoppingCartItem pc-row" id="shoppingCartItem">                                         
                                                 <div class="shopping-cart-item">
-                                                    <img src="/images/<%= products_Detail[i].Products.image %>" class="pc-shopping-cart-image" id="product-image">
-                                                    <h6 class="shopping-cart-item-title shoppingCartItemTitle " id="product-name"><%= products_Detail[i].Products.name %></h6>
-                                                    <h4 type="hidden" id="price<%= products_Detail[i].Products.id %>">  </h4>
-                                                    <p class="shopping-cart-price" id="shoppingCartItemPrice"><%= products_Detail[i].Products.price %></p>
+                                                    <img src="<%= products_Detail[i].Products.image %>" class="pc-shopping-cart-image" id="product-image">
+                                                    <h6 class="shopping-cart-item-title " id="product-name"><%= products_Detail[i].Products.name %></h6>
+                                                    <h4  type="hidden" id="price<%= products_Detail[i].Products.id %>">  </h4>
+                                                    <p class="shopping-cart-item-price" id="shoppingCartItemPrice"><%= products_Detail[i].Products.price %></p>
                                                 </div>
                                                 <div class="shopping-cart-quantity ">
                                                     <input class="pc-shopping-cart-quantity-input " id="shoppingCartItemQuantity" type="number" value="1">
