commit to checkout

--- a/views/sales/productCart.ejs
+++ b/views/sales/productCart.ejs
@@ -102,11 +102,11 @@
                                     </div>
                                     <div class="pc-counter-ResumenCompra">
                                         <label class=".pc-counter-label-det-label2" >ARS</label>
-                                        <input type="text" class="pc-counter-label-det-valor shipping-cost" name="totalShipping" value="250" title="totalShipping" placeholder="" readonly="readonly">
+                                        <input type="text" class="pc-counter-label-det-valor" name="totalShipping" value="250" title="totalShipping" placeholder="" readonly="readonly">
                                     </div>
                                     <div class="pc-counter-ResumenCompra">
                                         <label class=".pc-counter-label-det-label2" >ARS</label>
-                                        <input type="text" class="pc-counter-label-det-valor total" name="total" value="" title="total" placeholder="" readonly="readonly">
+                                        <input type="text" class="pc-counter-label-det-valor" name="total" value="1250" title="total" placeholder="" readonly="readonly">
                                     </div>                                   
                                 </div>  
                                 
