imagenes slider actualizadas

--- a/views/quienesSomos.ejs
+++ b/views/quienesSomos.ejs
@@ -13,10 +13,10 @@
         <div class="pd-quienes-somos-right">
             <div class="slider qs-img-container">
                 <ul>
-                    <li><img src="/images/DSC_0005.jpg" alt="image slider" class="slider-img"></li>
-                    <li><img src="/images/DSC_0007.jpg" alt="image slider" class="slider-img"></li>
-                    <li><img src="/images/DSC_0014.jpg" alt="image slider" class="slider-img"></li>
-                    <li><img src="/images/DSC_0030.jpg" alt="image slider" class="slider-img"></li>
+                    <li><img src="https://res.cloudinary.com/ds0upcco9/image/upload/v1659400606/images/DSC_0527_wmm5yz.jpg" alt="image slider" class="slider-img"></li>
+                    <li><img src="https://res.cloudinary.com/ds0upcco9/image/upload/v1659400604/images/DSC_0575_jr7og4.jpg" alt="image slider" class="slider-img"></li>
+                    <li><img src="https://res.cloudinary.com/ds0upcco9/image/upload/v1659400601/images/DSC_0618_h8yjcb.jpg" alt="image slider" class="slider-img"></li>
+                    <li><img src="https://res.cloudinary.com/ds0upcco9/image/upload/v1659400590/images/DSC_0543_dryby2.jpg" alt="image slider" class="slider-img"></li>
                 </ul>
             </div>
             <div>
@@ -28,10 +28,10 @@
         <div class="pd-quienes-somos-left">
             <div class="slider qs-img-container">
                 <ul>
-                    <li><img src="/images/DSC_0005.jpg" alt="image slider" class="slider-img"></li>
-                    <li><img src="/images/DSC_0007.jpg" alt="image slider" class="slider-img"></li>
-                    <li><img src="/images/DSC_0014.jpg" alt="image slider" class="slider-img"></li>
-                    <li><img src="/images/DSC_0030.jpg" alt="image slider" class="slider-img"></li>
+                    <li><img src="https://res.cloudinary.com/ds0upcco9/image/upload/v1659118722/images/DSC_0005_o72uoh.jpg" alt="image slider" class="slider-img"></li>
+                    <li><img src="https://res.cloudinary.com/ds0upcco9/image/upload/v1659118785/images/DSC_0007_lo0meb.jpg" alt="image slider" class="slider-img"></li>
+                    <li><img src="https://res.cloudinary.com/ds0upcco9/image/upload/v1659118707/images/DSC_0004_mbapmg.jpg" alt="image slider" class="slider-img"></li>
+                    <li><img src="https://res.cloudinary.com/ds0upcco9/image/upload/v1659118686/images/DSC_0014_xax5nj.jpg" alt="image slider" class="slider-img"></li>
                 </ul>
             </div>
             <div>
