--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,23 +8,27 @@
     box-shadow: 0 0 10px #ff8a00;
    }
 
+  
+
 body  {
   background-color: #eeede1a8;
   font-family: "Montagu Slab", serif;
-  /*background-image: url("/Desing/imgs/bg1.png");*/
   background-size: auto auto;
-  height: 100%;
+  /* height: 100%; */
+  position:relative;
+  padding-bottom: 40vh;
+  min-height: 100vh;
 }
 
 .content{
   height:90%;
 }
 
+
 footer{
-  position: relative;
+  position: absolute;
   bottom: 0;
   width: 100%;
-  height: 10%;
 }
 
 .enDesarrollo{
@@ -473,6 +477,25 @@ form div label > b {
   max-width: 300px;
   align-items: center;
   justify-content: space-evenly;
+}
+
+.rg-img-profile{
+  width: 70%;
+}
+
+.rg-btn-avatar{
+    padding: 5px;
+    margin: 5px;
+    font-family: "Montagu Slab", serif;
+    background-color: #000000;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    align-items: right;
+    cursor: pointer;
+    display: inline-block;  /*convierte las lineas de la lista en bloque para poder darles un padding*/
+    transition-property: color, box-shadow;
+    transition-duration: 200ms;  
 }
 
 .rg-form [type="submit"], .rg-form [type="reset"]{
