--- a/views/users/editProfile.ejs
+++ b/views/users/editProfile.ejs
@@ -74,22 +74,11 @@
             </div>             
             <div>
                 <div >
-                    <label><b>Imagen de perfil:</b></label>
-                    <br>
-                    <div>
-                        <img src="<%= userToEdit.avatar?userToEdit.avatar: oldData.avatar %> " width="150px">
-                    </div>
-                    <input type="hidden" name="oldAvatar" value="<%= userToEdit != undefined && userToEdit.avatar!=undefined ? userToEdit.avatar : locals.oldData ? oldData.avatar : null %>">
-                    <input 
-                        type="file" name="avatar" id="avatar" accept=".jpg,.png,.jpeg,.gif" class="rg-input"
-                        value="<%=  userToEdit != undefined && userToEdit.avatar!=undefined ? userToEdit.avatar : locals.oldData ? oldData.avatar : null %>">
-                        <% if (locals.errors && errors.avatar) { %>
-                            <div class="text-danger" id="msgFront_avatar">
-                                <%= errors.avatar.msg %> 
-                            </div>
-                        <% }else{%>
-                            <div class="text-danger" id="msgFront_avatar"></div>
-                        <% } %>            
+                    <label><b>Imagen de perfil (opcional)</b></label>
+                    <img src="<%= userToEdit.avatar%>" class="rg-img-profile" id="imageProfile" alt="">
+                    <input type="button" id="avatar" class="rg-btn-avatar" value="Seleccionar Imagen">
+                    <input type="hidden" name="oldAvatar" id="hiddenAvatar" value="<%= userToEdit.avatar%>">
+                    <br>           
                 </div>
             </div>
         
@@ -109,9 +98,10 @@
         </form>        
     </section>
     <!-- Footer-->
-    <%- include("../partials/footer") %>
-    <script src="/js/registerFront.js"></script>
-    
+    <%- include("../partials/footer") %>  
+    <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>
+    <script src="/Js/widgetCloudinaryUsers.js"></script>
+    <script src="/js/registerFront.js"></script>    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
     <script moment().format()></script>
 </body>
