--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -126,23 +126,11 @@
             <div>
                 <div >
                     <label><b>Imagen de perfil (opcional)</b></label>
+                    <img src="https://res.cloudinary.com/ds0upcco9/image/upload/v1659118673/images/avatars/default_img_wmlytg.png" class="rg-img-profile" id="imageProfile" alt="">
+                    <input type="button" id="avatar" class="rg-btn-avatar" value="Seleccionar Imagen">
+                    <input type="hidden" name="oldAvatar" id="hiddenAvatar" value="'https://res.cloudinary.com/ds0upcco9/image/upload/v1659118673/images/avatars/default_img_wmlytg.png'">
                     <br>
-                    
-                    <input 
-                        type="file" 
-                        name="avatar"
-                        id="avatar"
-                        class="rg-input"
-                        accept=".jpg,.png,.jpeg,.gif"
-                        class="rg-input"<%= locals.errors && errors.password ? 'is-invalid' : null %>"
-                        value="<%= locals.oldData ? oldData.avatar : null %>">
-                <% if (locals.errors && errors.avatar) { %>
-                    <div class="text-danger">
-                        <%= errors.avatar.msg %> 
-                    </div>
-                <% } %>
                 </div>
-                <div class="text-danger" id="msgFront_avatar"> </div>
             </div>
             <p>* Campos requeridos.</p>
             <div class="rg-btn-div rg-input" >
@@ -155,9 +143,10 @@
     </section>
     <!-- Footer-->
     <%- include("../partials/footer") %>
-    <script src="/js/registerFront.js"></script>
-    
+    <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript">    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
     <script moment().format()></script>
+    <script src="/Js/widgetCloudinaryUsers.js"></script>
+    <script src="/js/registerFront.js"></script>    
 </body>
 </html>
