--- a/views/product/productCreate.ejs
+++ b/views/product/productCreate.ejs
@@ -108,17 +108,20 @@
                                     <label><b>Imagen</b></label>
                                     <input type="button" id="btnImage" class="rg-btn-avatar" value="Seleccionar Imagen">
                                     <input type="hidden" name="oldProductImage" id="hiddenProduct" value="https://res.cloudinary.com/ds0upcco9/image/upload/v1659489493/images/Logos/1080x1080Original_qhz8im.png">
-                                    <img src="https://res.cloudinary.com/ds0upcco9/image/upload/v1659489493/images/Logos/1080x1080Original_qhz8im.png" class="rg-img-profile" id="imageProduct" alt="">
+                                </div>
+
+                                    <img  src="https://res.cloudinary.com/ds0upcco9/image/upload/v1659489493/images/Logos/1080x1080Original_qhz8im.png" class="rg-img-profile" id="imageProduct" alt="">
                                     <br>
-                                </div>       
+                               
                             </li>     
                         </ul>
-      
-                    <div class="pd-options rg-input">
-                        <input type="submit" class="lg-submit" value="Guardar">
-                        <input type="reset" class="lg-submit" name="limpiar" value="Limpiar">
-                    </div>                
-                </div>
+                        <div class=" rg-form rg-btn-div" >
+                            <div class="pd-options rg-input">
+                                <input type="submit" class="lg-submit" value="Guardar">
+                                <input type="reset" class="lg-submit" name="limpiar" value="Limpiar">
+                            </div>                
+                        </div>
+                    </div>
             </form> 
         </div>
 
