--- a/views/sales/productCart.ejs
+++ b/views/sales/productCart.ejs
@@ -17,15 +17,15 @@
                     <% for (i=0;i< products_Detail.length;i++){%>
                         <div class="shoppingCartItem pc-row" id="shoppingCartItem">                                         
                             <div class="shopping-cart-item">
-                                <img src="<%= products_Detail[i].Products.image %>" class="pc-shopping-cart-image" id="product-image">
-                                <h6 class="shopping-cart-item-title shoppingCartItemTitle " id="product-name"><%= products_Detail[i].Products.name %></h6>
-                                <h4 type="hidden" id="price<%= products_Detail[i].Products.id %>">  </h4>
-                                <p class="shopping-cart-price" id="shoppingCartItemPrice"><%= products_Detail[i].Products.price %></p>
+                                <img src="<%= products_Detail[i].image %>" class="pc-shopping-cart-image" id="product-image">
+                                <h6 class="shopping-cart-item-title shoppingCartItemTitle " id="product-name"><%= products_Detail[i].name %></h6>
+                                <h4 type="hidden" id="price<%= products_Detail[i].id %>">  </h4>
+                                <p class="shopping-cart-price" id="shoppingCartItemPrice"><%= products_Detail[i].price %></p>
                             </div>
                             <div class="shopping-cart-quantity ">
-                                <form action="/sales/productCart/<%= products_Detail[i].Products.id %>?_method=DELETE" method="POST">
-                                    <input class="pc-shopping-cart-quantity-input " id="shoppingCartItemQuantity" type="number" value="1">
-                                    <button class="btn pc-btn-danger buttonDelete" name="buttonDelete" id="buttonDelete_<%= products_Detail[i].Products.id %>" type="submit">X</button>
+                                <form action="/sales/productCart/<%= products_Detail[i].id %>?_method=DELETE" method="POST">
+                                    <input class="pc-shopping-cart-quantity-input " id="shoppingCartItemQuantity" type="number" value="<%= products_Detail[i].quantity %>">
+                                    <button class="btn pc-btn-danger buttonDelete" name="buttonDelete" id="buttonDelete_<%= products_Detail[i].id %>" type="submit">X</button>
                                 </form>
                             </div>                                          
                         </div>                                       
